--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 body {
   padding: 0;
   margin: 0;
+  margin-top: 20%;
 }
 
 .board {
@@ -25,4 +26,20 @@ body {
   display: flex;
   flex-direction: row;
   border: 1 solid black;
+}
+
+.square {
+  flex: 33%;
+  height: 100%;
+  border: 1px solid black;
+  cursor: pointer;
+  display: grid;
+  place-items: center;
+  font-size: 30px;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.square:active {
+  background-color: #9e835f;
 }
